; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-tnt_cache.c_is_empty_yes.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-tnt_cache.c_is_empty_yes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptunit_result = type { i32 }
%struct.pt_tnt_cache = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @is_empty_yes to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_empty_yes() #0 {
  %1 = alloca %struct.ptunit_result, align 4
  %2 = alloca %struct.pt_tnt_cache, align 8
  %3 = alloca i32, align 4
  %4 = getelementptr inbounds %struct.pt_tnt_cache, %struct.pt_tnt_cache* %2, i32 0, i32 0
  store i64 0, i64* %4, align 8
  %5 = call i32 @pt_tnt_cache_is_empty(%struct.pt_tnt_cache* %2)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @ptu_int_eq(i32 %6, i32 1)
  %8 = call i32 (...) @ptu_passed()
  %9 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  ret i32 %11
}

declare dso_local i32 @pt_tnt_cache_is_empty(%struct.pt_tnt_cache*) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
